Actions
Bug #12110
closedaudio: control reaches end of non-void function
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with gcc 8:
In file included from ../include/Audio.h:30, from ../include/AudioStream.h:32, from ../include/AudioUnixfile.h:32, from ../include/AudioFile.h:40, from AudioFile.cc:40: ../include/AudioTypes.h: In member function 'FileAccess::operator int()': ../include/AudioTypes.h:118:2: error: control reaches end of non-void function [-Werror=return-type] } ^ In file included from AudioFile.cc:40: ../include/AudioFile.h: In member function 'VMAccess::operator int()': ../include/AudioFile.h:62:2: error: control reaches end of non-void function [-Werror=return-type] } ^ In file included from AudioFile.cc:40: ../include/AudioFile.h: In member function 'VMAccess::operator int()': ../include/AudioFile.h:62:2: error: control reaches end of non-void function [-Werror=return-type] } ^ cc1plus: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1146e6b36a51a32283a4cfc8530fd73b88b79a78
commit 1146e6b36a51a32283a4cfc8530fd73b88b79a78 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-27T17:05:53.000Z 12110 audio: control reaches end of non-void function Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions